--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.firebase:firebase-database:20.0.4'
-    //implementation 'com.android.support:design:28.0.0'
-    //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-    //implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
